@@ -28,7 +28,7 @@
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
-      <version>0.23.0-SNAPSHOT</version>
+      <version>0.23.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
