@@ -41,8 +41,8 @@ ftplet-api.version=1.0.0
 ftpserver-core.version=1.0.0
 ftpserver-deprecated.version=1.0.0-M2
 
-hadoop-common.version=0.23.0-SNAPSHOT
-hadoop-hdfs.version=0.23.0-SNAPSHOT
+hadoop-common.version=0.23.1-SNAPSHOT
+hadoop-hdfs.version=0.23.1-SNAPSHOT
 
 hsqldb.version=1.8.0.10
 
@@ -81,5 +81,5 @@ wagon-http.version=1.0-beta-2
 xmlenc.version=0.52
 xerces.version=1.4.4
 
-yarn.version=0.23.0-SNAPSHOT
-hadoop-mapreduce.version=0.23.0-SNAPSHOT
+yarn.version=0.23.1-SNAPSHOT
+hadoop-mapreduce.version=0.23.1-SNAPSHOT
